hphp/hack/test/typecheck/tconst/cyclic_type_const.php.exp
File "cyclic_type_const.php", line 8, characters 14-14:
Cyclic type constant:
  C2::T -> C1::T -> C2::T (Typing[4131])
